project/stage/tests/reject/bad_statements/bad_println_statements/uppercase_println.ul
void main() {
    PRINT "me";
}
void main() {
    PRINTLN "me";
}
